# Document_Intelligence_Refinery

./: README.md  dashboard.html  pyproject.toml  server.py
.refinery/: .fernet.key  audit_ledger.jsonl  extraction_ledger.jsonl  fact_table.db  human_loop_queue.jsonl
.refinery/dashboard/: 212dc42370e200d4.jsonl  74c05a69f89eccaf.jsonl
.refinery/pageindex/: 1828b093-4cd3-4259-90fc-8e2ee70c8673.json  18502aca-10cc-4c40-a25d-d440101bb04e.json  2afc7168-0d44-4e96-97a5-6a1fb0340a13.json  2d8701e3-80f9-4c42-8789-68ded040d928.json  2e450beb-0c9e-4608-bb11-5483193ed23d.json  3a5a0803-73f0-469c-af1e-6e3250dd9c48.json  40d55111-7fbc-42fb-aa05-5d852be8bb96.json  4727709e-4c3f-4c4f-ba4e-2e9beb84caa3.json  568ebdd9-b3f5-4cc7-a5a5-4697e72c1662.json  632a9af7-8ca5-4479-85a9-f673e496619f.json  73c4818c-0739-4da4-b8c3-0d1a8dafdc74.json  8c0e4e9c-7192-4df0-b471-99e17cf2c780.json  8cd9d076-5359-4a4a-9524-586cc1454871.json  8df6ea06-e575-46cc-a10a-3980c9d603cd.json  93a3227d-e343-4b05-a53d-65194f4dd5af.json  943ff0ee-d8a5-426e-af84-cfa0aec4fa66.json  961bb696-ed87-42e9-992d-b4e188a8a0c7.json  984d29c2-ee1c-4f4e-b078-f1f5acff5538.json  a23eb3ef-545e-4cd1-81aa-a9f88e6d3b06.json  a307ffdd-153f-4714-8f34-b08e48b66bb7.json  a60dfa97-ad1d-42f7-8711-a6cdfda598bc.json  c5b71d09-3459-4514-a314-86f2c5371550.json  d2e12f0a-aa1e-4413-849f-1fce6153e237.json  d94d8aed-4d97-4de9-8f23-97ba1153aee4.json
rubric/: extraction_rules.yaml  policies.yaml
src/: main.py
src/agents/: __init__.py  chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/core/: __init__.py  constraint_enforcement.py  policy_engine.py  security.py
src/document_intelligence_refinery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/models/: common.py  document.py  ldu.py  pageindex.py  profile.py  provenance.py  schemas.py
src/strategies/: __init__.py  base.py  fast_text.py  layout.py  vision.py
tests/: conftest.py  test_agents.py  test_constraint_enforcement.py  test_policy_engine.py  test_security.py  test_triage.py
