[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-intelligence-refinery"
version = "2.0.0"
description = "Agentic Pipeline for Unstructured Document Extraction at Enterprise Scale"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "FDE Program", email = "fde@trp1.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pydantic>=2.5.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "docling>=2.0.0",
    "openai>=1.10.0",
    "pyyaml>=6.0.1",
    "pytest>=7.4.0",
    "spacy>=3.7.0",
    "chromadb>=0.4.0",
    "sqlite-utils>=3.36",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "langdetect>=1.0.9",
    "numpy>=1.24.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = ["black>=23.0.0", "ruff>=0.1.0", "mypy>=1.7.0", "pytest-cov>=4.1.0"]

[project.scripts]
refinery = "src.agents.extractor:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
strict = true