[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-intelligence-refinery"
version = "1.0.0"
description = "TRP1 Week 3: Multi-strategy document extraction pipeline with security and policy enforcement"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    # PDF extraction
    "pdfplumber>=0.10.3",
    "pymupdf>=1.23.7",              # PyMuPDF — page rendering for VLM
    # Layout extraction
    "docling>=1.14.0",
    # Security
    "cryptography>=41.0.0",
    "python-magic>=0.4.27",
    # PII Redaction
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "spacy>=3.7.0",
    # Language detection
    "langdetect>=1.0.9",
    # HTTP (VLM API calls)
    "requests>=2.31.0",
    # ClamAV client
    "pyclamd>=0.4.0",
    # CLI
    "rich>=13.7.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "bandit>=1.7.6",
    "semgrep>=1.55.0",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31.0",
]

[project.scripts]
refinery = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v --cov=src --cov-report=term-missing"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008", "N802", "N806"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/"]

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["src/main.py", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
